fixed PR comments from luke added are-you-stuck page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,10 @@ p {
 }
 
 a {
-    color:white;
+    color: var(--grey);
+    border-bottom: 1px dotted #9e9e9e;
+    text-decoration: none;
+    /* color:white; */
 }
 
 a:hover {
